--- a/style.css
+++ b/style.css
@@ -388,7 +388,7 @@ header .container-grid {
 
 }
 
-.campo-descricao textarea{
+.campo-descricao textarea {
     color: var(--preto);
     background-color: var(--branco);
 
@@ -400,43 +400,217 @@ header .container-grid {
     padding: 10px;
 
     resize: none;
-    
-}
-.campo-lable,
-.campo-descricao label{
-    margin-bottom: 15px;
-}
-.campo input,
-.campo-descricao textarea{
-font-family: "Recursive" , sans-linear;
-font-size: 17px;
+
 }
 
-.campo input::placeholder
-.campo-descricao textarea::placeholder{
+.campo-lable,
+.campo-descricao label {
+    margin-bottom: 15px;
+}
+
+.campo input,
+.campo-descricao textarea {
+    font-family: "Recursive", sans-linear;
+    font-size: 17px;
+}
+
+.campo input::placeholder .campo-descricao textarea::placeholder {
     color: #a0a0a0a0;
 }
+
 .campo input:focus,
-.campo-descricao textarea:focus{
+.campo-descricao textarea:focus {
     outline: 2px solid var(--verde-pixel);
 
 }
-    #contato form button{
-       height: 40px;
-       width: 60%;
 
-       background-color: var(--roxo-pixelV);
-       color: var(--branco);
-        
+#contatos form button {
+    height: 40px;
+    width: 60%;
 
-       border: none;
-       border-radius: 4px;
+    background-color: var(--roxo-pixelV);
+    color: var(--branco);
 
-       font-size: 17px;
-       font-family: "Recursive", sans-linear;
-       font-weight: 700;
 
-       text-transform: uppercase;
-       cursor: pointer;
-       transition: background-color 500ms;
+    border: none;
+    border-radius: 4px;
+
+    font-size: 17px;
+    font-family: "Recursive", sans-linear;
+    font-weight: 700;
+
+    text-transform: uppercase;
+    cursor: pointer;
+    transition: background-color 500ms;
+}
+
+#contato form button:hover {
+    background-color: var(--verde-pixel);
+}
+
+/* ---------------Foolter--------------------- */
+
+footer {
+    height: 250px;
+    background-image: url(./imgs/footer.png);
+}
+
+footer img {
+    height: 90px;
+}
+
+footer .container-grid {
+    height: 100%;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.redes-sociais {
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+
+.redes-sociais p {
+    font-family: "recursive", sans-linear-bold;
+    font-size: 24px;
+    color: white;
+}
+
+.icones-redes {
+    width: 240px;
+
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.icones-redes a {
+
+    color: var(--branco);
+}
+
+
+.icones-redes a:hover {
+
+    color: var(--verde-pixel);
+}
+
+/* -------------------------------responsividade---------------------- */
+
+@media screen and (max-width: 1024px) {
+
+    .titulo,
+    .titulo h2 {
+        font-size: 26px;
+        font-family: "Recursive", sans-linear-bold;
     }
+
+    .menu {
+        justify-content: space-evenly;
+
+    }
+
+    .titulo span {
+        line-height: 45px;
+    }
+
+    #sobre p {
+        font-size: 16px;
+    }
+
+    #servicos .card svg {
+        height: 55px;
+    }
+
+}
+
+/* --------------------------Menu Hamburguer-------------------- */
+#icone-barras,
+#icone-x {
+    display: none;
+}
+
+.menu-fechado {
+    display: none;
+
+}
+
+/* -------------------------------------------------- */
+
+
+@media screen and (max-width: 768px){
+    header{
+        position: relative;
+    }
+    header button{
+        width: 50px;
+        background: none;
+        border: none;
+
+        cursor: pointer;
+        display: unset;
+    }
+    header svg{
+        fill: var(--branco);
+    }
+    nav.menu{
+        height: 500px;
+    width: 350px;
+
+    padding: 0px 30px;
+
+    flex-direction: column;
+    justify-content: space-around;
+    background-color: var(--preto);
+ position: absolute;
+ right: 0px;
+ top: 165px;
+ z-index: 1;
+
+
+}
+.conteudo-banner img{
+    display: none;
+
+}
+.conteudo-banner{
+    text-align: center;
+}
+#sobre img{
+    display: none;
+}
+
+.titulo{
+    justify-content: center;
+}
+#cases img{
+    height: 200px;
+}
+
+footer .roda-pe{
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+}
+footer img{
+    height: 80px;
+
+
+}
+
+.redes-sociais{
+    align-items: center;
+    justify-content: center;
+}
+.redes-sociais svg{
+    height: 35px;
+}
+}
+
